# eurorust-2025-workshop

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: codspeed.yml
benches/: bfs.rs  blob_corruption_checker.rs  dna_matcher.rs  hello_world.rs  lut_filters_bench.rs  lut_grayscale_bench.rs  simd_brightness_bench.rs  simd_filters_bench.rs
src/: bfs.rs  blob_corruption_checker.rs  dna_matcher.rs  helpers.rs  lib.rs  lut_filters.rs  lut_grayscale.rs  simd_brightness.rs  simd_filters.rs
