[package]
name = "eurorust-2025-workshop"
version = "0.1.0"
edition = "2024"

[lib]
name = "eurorust_2025_workshop"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
image = "0.25"
image-compare = "0.5.0"
arraydeque = "0.5.1"
memmap2 = "0.9.8"
rayon = "1.11.0"

[dev-dependencies]
divan = { version = "4.0.2", package = "codspeed-divan-compat" }

[[bin]]
name = "generate_fasta"
path = "bin/generate_fasta.rs"

[[bin]]
name = "generate_blobs"
path = "bin/generate_blobs.rs"

[[bench]]
name = "hello_world"
harness = false

[[bench]]
name = "dna_matcher"
harness = false

[[bench]]
name = "bfs"
harness = false

[[bench]]
name = "blob_corruption_checker"
harness = false

[[bench]]
name = "lut_grayscale_bench"
harness = false

[[bench]]
name = "lut_filters_bench"
harness = false

[[bench]]
name = "simd_brightness_bench"
harness = false

[[bench]]
name = "simd_filters_bench"
harness = false
